Output: Generate Comment elements for declaration doc comments
Add a `Comment` XML element to the castxml output format to represent
comments.  Include only documentation comments attached to declarations.
For each comment, reference the source file location containing it such
that clients can extract the actual comment content themselves.

Increment the format *major* version number to indicate the addition of
an element that will require clients to be updated.

Fixes: #152

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -447,6 +447,17 @@ castxml_test_output(Class-template-member-Typedef)
 castxml_test_output(Class-template-member-Typedef-const)
 castxml_test_output(Class-template-member-template)
 castxml_test_output(Class-template-recurse)
+castxml_test_output(Comment-Class)
+castxml_test_output(Comment-Enumeration)
+castxml_test_output(Comment-Field)
+castxml_test_output(Comment-Function)
+castxml_test_output(Comment-Function-expansion)
+castxml_test_output(Comment-Function-separated)
+castxml_test_output(Comment-Method)
+castxml_test_output(Comment-Namespace)
+castxml_test_output_11(Comment-TypeAlias)
+castxml_test_output(Comment-Typedef)
+castxml_test_output(Comment-Variable)
 castxml_test_output(Constructor)
 castxml_test_output(Constructor-annotate)
 castxml_test_output(Constructor-deprecated)
