Output: Add 'final' and 'override' attributes to virtual methods
These can go in both castxml and gccxml output formats because they are
just listed in an existing XML attribute.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -505,6 +505,8 @@ castxml_test_output(Method-annotate)
 castxml_test_output(Method-deprecated)
 castxml_test_output(Method-Argument-default)
 castxml_test_output(Method-Argument-default-cast)
+castxml_test_output_11(Method-final)
+castxml_test_output_11(Method-override)
 castxml_test_output(Method-overrides)
 castxml_test_output(Method-rvalue-reference)
 castxml_test_output(MethodType)
