Output: Generate explicit deprecation attributes
When there is a deprecation attribute with a message, add it in a
dedicated XML attribute.  Do this only for the CastXML formats.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -420,6 +420,7 @@ castxml_test_output(Class)
 castxml_test_output(Class-abstract)
 castxml_test_output(Class-annotate)
 castxml_test_output(Class-deprecated)
+castxml_test_output(Class-deprecated-long)
 castxml_test_output(Class-base-offset)
 castxml_test_output(Class-base-typedef)
 castxml_test_output(Class-bases)
