Output: Generate Enumeration underlying integer type
Fixes: #187

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -481,6 +481,7 @@ castxml_test_output(Enumeration-annotate)
 castxml_test_output(Enumeration-deprecated)
 castxml_test_output(Enumeration-anonymous)
 castxml_test_output_11(Enumeration-scoped)
+castxml_test_output_11(Enumeration-type)
 castxml_test_output(Field)
 castxml_test_output(Field-annotate)
 castxml_test_output(Field-deprecated)
