Output: Account for multiple annotations
Switch to only creating a single `annotation=` attribute for CastXML.
Add an XML encoded newline character to that attribute to separate the
different strings from each other.

Add a simple test for Enumerations which has multiple annotations.

Fixes: #194

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -478,6 +478,7 @@ castxml_test_output(Destructor-deprecated)
 castxml_test_output(Elaborated)
 castxml_test_output(Enumeration)
 castxml_test_output(Enumeration-annotate)
+castxml_test_output(Enumeration-annotate-multi)
 castxml_test_output(Enumeration-deprecated)
 castxml_test_output(Enumeration-anonymous)
 castxml_test_output_11(Enumeration-scoped)
