Output: Generate AtomicType elements for C11 _Atomic types
Add an `AtomicType` XML element to the castxml output format to represent
C11 `_Atomic` types.  Reference the underlying type.

Increment the format *major* version number to indicate the addition of
an element that will require clients to be updated.

Fixes: #197

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -416,6 +416,14 @@ unset(castxml_test_cmd_extra_arguments)
 
 castxml_test_output(ArrayType)
 castxml_test_output(ArrayType-incomplete)
+castxml_test_output(Atomic-int)
+castxml_test_output(Atomic-int-const)
+castxml_test_output(Atomic-ptr)
+castxml_test_output(Atomic-struct)
+castxml_test_output_c(Atomic-int)
+castxml_test_output_c(Atomic-int-const)
+castxml_test_output_c(Atomic-ptr)
+castxml_test_output_c(Atomic-struct)
 castxml_test_output(Class)
 castxml_test_output(Class-abstract)
 castxml_test_output(Class-annotate)
