RunClang: Fix arm64v8 rounding intrinsics when simulating GCC
LLVM/Clang predefines `__ARM_FEATURE_DIRECTED_ROUNDING` when ever it
defines `__ARM_ARCH >= 8`.  Its corresponding `arm_neon.h` intrinsics
header relies on the feature macro to provide rounding intrinsics.
GCC does not define the feature macro, but its own `arm_neon.h`
provides the rounding intrinsics whenever `__ARM_ARCH >= 8`.

Teach CastXML to add the `__ARM_FEATURE_DIRECTED_ROUNDING` definition
whenever the compiler's predefined macros include `__ARM_ARCH >= 8` so
that the `arm_neon.h` intrinsics header we distribute will provide the
rounding intrinsics.

Fixes: #223

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -345,6 +345,7 @@ add_executable(cc-gnu cc-gnu.c)
 set_property(SOURCE cc-gnu.c APPEND PROPERTY COMPILE_DEFINITIONS
   "TEST_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\"")
 castxml_test_cmd(cc-gnu-bad-cmd --castxml-cc-gnu cc-gnu-bad-cmd ${empty_cxx})
+castxml_test_cmd(cc-gnu-intrinsics-arm64v8 --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -tgt-arm64v8 ")" -v ${input}/intrinsics-arm64v8.cxx)
 castxml_test_cmd(cc-gnu-src-c-E --castxml-cc-gnu $<TARGET_FILE:cc-gnu> ${empty_c} -E -dM)
 castxml_test_cmd(cc-gnu-src-cxx-E --castxml-cc-gnu $<TARGET_FILE:cc-gnu> ${empty_cxx} -E -dM)
 castxml_test_cmd(cc-gnu-src-cxx-cmd --castxml-cc-gnu $<TARGET_FILE:cc-gnu> ${empty_cxx} "-###")
