Output: Add an 'init' attribute to Field elements
Report the C++11 in-class initializer of a field, if any.

Increment the format *minor* version number to indicate the addition
of an attribute that does not require clients to be updated.

Fixes: #226

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -499,6 +499,7 @@ castxml_test_output_11(Enumeration-type)
 castxml_test_output(Field)
 castxml_test_output(Field-annotate)
 castxml_test_output(Field-deprecated)
+castxml_test_output_11(Field-init)
 castxml_test_output(Function)
 castxml_test_output_c(Function)
 castxml_test_output_14(Function-auto)
