test: add case with Elaborated type due to qualified name
Currently this causes duplicate `PointerType` nodes because the
`ElaboratedType` they reference is erased by `AddTypeDumpNode`.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -489,6 +489,7 @@ castxml_test_output(Destructor)
 castxml_test_output(Destructor-annotate)
 castxml_test_output(Destructor-deprecated)
 castxml_test_output(Elaborated)
+castxml_test_output(Elaborated-ns)
 castxml_test_output(Enumeration)
 castxml_test_output(Enumeration-annotate)
 castxml_test_output(Enumeration-annotate-multi)
