Port to LLVM/Clang Git main as of 2023-01-23 (9451572ade)
Compile as C++17.  Look for a clang resource directory named only with
the major version.  Update our float128 check to account for the change
in LLVM/Clang commit `15f3cd6bfc67` ([clang] Implement ElaboratedType
sugaring for types written bare, 2021-10-11).

Fixes: #237

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,9 @@ if(CYGWIN OR MINGW)
 else()
   set(CMAKE_CXX_EXTENSIONS OFF)
 endif()
-if(LLVM_VERSION_MAJOR GREATER 9)
+if(LLVM_VERSION_MAJOR GREATER 15)
+  set(CMAKE_CXX_STANDARD 17)
+elseif(LLVM_VERSION_MAJOR GREATER 9)
   set(CMAKE_CXX_STANDARD 14)
 else()
   set(CMAKE_CXX_STANDARD 11)
@@ -165,6 +167,9 @@ if(NOT CLANG_RESOURCE_DIR)
   foreach(d ${dirs})
     if(IS_DIRECTORY "${d}/clang/${v}/include")
       set(CLANG_RESOURCE_DIR ${d}/clang/${v})
+      break()
+    elseif(IS_DIRECTORY "${d}/clang/${LLVM_VERSION_MAJOR}/include")
+      set(CLANG_RESOURCE_DIR ${d}/clang/${LLVM_VERSION_MAJOR})
       break()
     endif()
     set(tried "${tried}\n  ${d}/clang/${v}")
