Output: Add AutoType element for "auto" types that have not been deduced
Normally we should increment the format *major* version number to
indicate the addition of an element that will require clients to be
updated.  However, the format major version has already been incremented
by commit f1220bd4 (Output: Add ElaboratedType elements with
"qualifier=" attribute, 2022-12-10) since the last release.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -504,6 +504,7 @@ castxml_test_output_11(Field-init)
 castxml_test_output(Function)
 castxml_test_output_c(Function)
 castxml_test_output_14(Function-auto)
+castxml_test_output_14(Function-auto-undeduced)
 castxml_test_output(Function-annotate)
 castxml_test_output(Function-deprecated)
 castxml_test_output(Function-extern-C)
