test: Add tests for C++20 modes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -159,6 +159,16 @@ macro(castxml_test_output_gnuxx17 test)
   castxml_test_output_common(castxml1 cxx gnu++17 ${test})
 endmacro()
 
+macro(castxml_test_output_cxx20 test)
+  castxml_test_output_common(gccxml cxx c++20 ${test})
+  castxml_test_output_common(castxml1 cxx c++20 ${test})
+endmacro()
+
+macro(castxml_test_output_gnuxx20 test)
+  castxml_test_output_common(gccxml cxx gnu++20 ${test})
+  castxml_test_output_common(castxml1 cxx gnu++20 ${test})
+endmacro()
+
 macro(castxml_test_output_broken_cxx98 test)
   castxml_test_output_common(gccxml.broken cxx c++98 ${test})
   castxml_test_output_common(castxml1.broken cxx c++98 ${test})
@@ -199,6 +209,16 @@ macro(castxml_test_output_broken_gnuxx17 test)
   castxml_test_output_common(castxml1.broken cxx gnu++17 ${test})
 endmacro()
 
+macro(castxml_test_output_broken_cxx20 test)
+  castxml_test_output_common(gccxml.broken cxx c++20 ${test})
+  castxml_test_output_common(castxml1.broken cxx c++20 ${test})
+endmacro()
+
+macro(castxml_test_output_broken_gnuxx20 test)
+  castxml_test_output_common(gccxml.broken cxx gnu++20 ${test})
+  castxml_test_output_common(castxml1.broken cxx gnu++20 ${test})
+endmacro()
+
 macro(castxml_test_output_c test)
   castxml_test_output_c89(${test})
   castxml_test_output_gnu89(${test})
@@ -217,6 +237,10 @@ macro(castxml_test_output test)
   castxml_test_output_gnuxx14(${test})
   castxml_test_output_cxx17(${test})
   castxml_test_output_gnuxx17(${test})
+  if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
+    castxml_test_output_cxx20(${test})
+    castxml_test_output_gnuxx20(${test})
+  endif()
 endmacro()
 
 macro(castxml_test_output_11 test)
@@ -226,6 +250,10 @@ macro(castxml_test_output_11 test)
   castxml_test_output_gnuxx14(${test})
   castxml_test_output_cxx17(${test})
   castxml_test_output_gnuxx17(${test})
+  if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
+    castxml_test_output_cxx20(${test})
+    castxml_test_output_gnuxx20(${test})
+  endif()
 endmacro()
 
 macro(castxml_test_output_14 test)
@@ -233,6 +261,10 @@ macro(castxml_test_output_14 test)
   castxml_test_output_gnuxx14(${test})
   castxml_test_output_cxx17(${test})
   castxml_test_output_gnuxx17(${test})
+  if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
+    castxml_test_output_cxx20(${test})
+    castxml_test_output_gnuxx20(${test})
+  endif()
 endmacro()
 
 macro(castxml_test_output_14below test)
@@ -253,6 +285,10 @@ macro(castxml_test_output_broken test)
   castxml_test_output_broken_gnuxx14(${test})
   castxml_test_output_broken_cxx17(${test})
   castxml_test_output_broken_gnuxx17(${test})
+  if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
+    castxml_test_output_broken_cxx20(${test})
+    castxml_test_output_broken_gnuxx20(${test})
+  endif()
 endmacro()
 
 set(input ${CMAKE_CURRENT_LIST_DIR}/input)
@@ -303,6 +339,11 @@ if(LLVM_VERSION_MAJOR VERSION_LESS 5)
 else()
   castxml_test_cmd(gccxml-and-c++17 --castxml-gccxml -std=c++17 ${empty_cxx})
   castxml_test_cmd(castxml-and-c++17 --castxml-output=1 -std=c++17 ${empty_cxx})
+endif()
+
+if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
+  castxml_test_cmd(gccxml-and-c++20 --castxml-gccxml -std=c++20 ${empty_cxx})
+  castxml_test_cmd(castxml-and-c++20 --castxml-output=1 -std=c++20 ${empty_cxx})
 endif()
 
 castxml_test_cmd(gccxml-and-objc1 --castxml-gccxml ${empty_m})
