RunClang: Detect -std=c++20 from --castxml-cc-{gnu,msvc}

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -415,6 +415,10 @@ else()
   castxml_test_cmd(cc-gnu-std-gnu++1z --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=201406L ")" ${empty_cxx} "-###")
   castxml_test_cmd(cc-gnu-std-gnu++17 --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=201703L ")" ${empty_cxx} "-###")
 endif()
+if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
+  castxml_test_cmd(cc-gnu-std-c++20 --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=202002L -ansi ")" ${empty_cxx} "-###")
+  castxml_test_cmd(cc-gnu-std-gnu++20 --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=202002L ")" ${empty_cxx} "-###")
+endif()
 castxml_test_cmd(cc-gnu-std-explicit --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=199901L ")" -std=c++14 ${empty_cxx} "-###")
 castxml_test_cmd(cc-gnu-c-bad-cmd --castxml-cc-gnu-c "(" cc-gnu-c-bad-cmd ")" ${empty_c})
 castxml_test_cmd(cc-gnu-c-src-c-E --castxml-cc-gnu-c $<TARGET_FILE:cc-gnu> ${empty_c} -E -dM)
@@ -447,6 +451,10 @@ castxml_test_cmd(cc-msvc-std-c++11 --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> 
 castxml_test_cmd(cc-msvc-std-c++14 --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1900 ")" ${empty_cxx} "-###")
 castxml_test_cmd(cc-msvc-std-c++17 --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1900 -msvc_lang=201703L ")" ${empty_cxx} "-###")
 castxml_test_cmd(cc-msvc-std-c++17-E --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1900 -msvc_lang=201703L -stdcpp_default_new_alignment=16ll ")" ${empty_cxx} -E -dM)
+if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
+  castxml_test_cmd(cc-msvc-std-c++20 --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1930 -msvc_lang=202002L ")" ${empty_cxx} "-###")
+  castxml_test_cmd(cc-msvc-std-c++20-E --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1930 -msvc_lang=202002L -stdcpp_default_new_alignment=16ll ")" ${empty_cxx} -E -dM)
+endif()
 castxml_test_cmd(cc-msvc-std-explicit --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1500 ")" -std=gnu++14 ${empty_cxx} "-###")
 castxml_test_cmd(cc-msvc-builtin-1800-E --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1800 ")" ${empty_cxx} -E -dM)
 castxml_test_cmd(cc-msvc-builtin-1900-E --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1900 ")" ${empty_cxx} -E -dM)
