--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -692,16 +692,16 @@ castxml_test_output_c(invalid)
 castxml_test_output_broken(ReferenceType-to-Class-template)
 
 set(castxml_test_output_extra_arguments --castxml-cc-gnu-c "(" $<TARGET_FILE:cc-gnu> --cc-define=__x86_64__ ")")
-castxml_test_output_c(GNU-float128)
+castxml_test_output_c(GNU-__float128)
 set(castxml_test_output_custom_start "")
-castxml_test_output_c(GNU-float128-nostart)
+castxml_test_output_c(GNU-__float128-nostart)
 unset(castxml_test_output_custom_start)
 unset(castxml_test_output_extra_arguments)
 
 set(castxml_test_output_extra_arguments --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> --cc-define=__x86_64__ ")")
-castxml_test_output(GNU-float128)
+castxml_test_output(GNU-__float128)
 set(castxml_test_output_custom_start "")
-castxml_test_output(GNU-float128-nostart)
+castxml_test_output(GNU-__float128-nostart)
 unset(castxml_test_output_custom_start)
 unset(castxml_test_output_extra_arguments)
 
