castxml: Improve simulated _Float## types to support glibc headers
Improve the simulated builtin types from commit 60bc7690 (castxml: Add
minimal support for GNU builtin _Float## types, 2024-01-17, v0.6.3~1^2)
to support conversions needed by `<math.h>` in C and `<cmath>` in C++.

Fixes: #251

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -696,6 +696,7 @@ castxml_test_output_c(GNU-_Float32)
 castxml_test_output_c(GNU-_Float32x)
 castxml_test_output_c(GNU-_Float64)
 castxml_test_output_c(GNU-_Float64x)
+set(castxml_test_output_extra_arguments --castxml-cc-gnu-c "(" $<TARGET_FILE:cc-gnu> --ver-major=7 --cc-define=__x86_64__ ")")
 castxml_test_output_c(GNU-_Float128)
 unset(castxml_test_output_extra_arguments)
 
@@ -704,6 +705,7 @@ castxml_test_output(GNU-_Float32)
 castxml_test_output(GNU-_Float32x)
 castxml_test_output(GNU-_Float64)
 castxml_test_output(GNU-_Float64x)
+set(castxml_test_output_extra_arguments --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> --ver-major=13 --cc-define=__x86_64__ ")")
 castxml_test_output(GNU-_Float128)
 unset(castxml_test_output_extra_arguments)
 
