--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -710,6 +710,7 @@ castxml_test_output(GNU-_Float128)
 unset(castxml_test_output_extra_arguments)
 
 set(castxml_test_output_extra_arguments --castxml-cc-gnu-c "(" $<TARGET_FILE:cc-gnu> --cc-define=__x86_64__ ")")
+castxml_test_output_c(GNU-__float80)
 castxml_test_output_c(GNU-__float128)
 set(castxml_test_output_custom_start "")
 castxml_test_output_c(GNU-__float128-nostart)
@@ -717,6 +718,7 @@ unset(castxml_test_output_custom_start)
 unset(castxml_test_output_extra_arguments)
 
 set(castxml_test_output_extra_arguments --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> --cc-define=__x86_64__ ")")
+castxml_test_output(GNU-__float80)
 castxml_test_output(GNU-__float128)
 set(castxml_test_output_custom_start "")
 castxml_test_output(GNU-__float128-nostart)
