--- a/test/expect/cmd.predefined-macros.stdout.txt.in
+++ b/test/expect/cmd.predefined-macros.stdout.txt.in
@@ -6,7 +6,7 @@
 #define __castxml_major__ @CastXML_VERSION_MAJOR@
 #define __castxml_minor__ @CastXML_VERSION_MINOR@
 #define __castxml_patch__ @CastXML_VERSION_PATCH@
-#define __clang__ 1(
+#define __clang__ 1\(?
 #define __clang_literal_encoding__ [^
 ]*)?
 #define __clang_major__ [0-9]+
