test: Tolerate more predefined '__c*' macros from LLVM/Clang
Clang 20 on `ppc64le` predefines two macros that appear alphabetically
between the `__castxml*` and `__clang*` macros causing the expected test
output to no longer match:

    #define __castxml_patch__ 11
    #define __cbcdtd __builtin_ppc_cbcdtd
    #define __cdtbcd __builtin_ppc_cdtbcd
    #define __clang__ 1

Generalize commit d2eda779 (test: Tolerate predefined __cdecl macro from
LLVM/Clang, 2025-02-10, v0.6.11~2^2) to cover this.

--- a/test/expect/cmd.predefined-macros.stdout.txt.in
+++ b/test/expect/cmd.predefined-macros.stdout.txt.in
@@ -6,8 +6,8 @@
 #define __castxml_major__ @CastXML_VERSION_MAJOR@
 #define __castxml_minor__ @CastXML_VERSION_MINOR@
 #define __castxml_patch__ @CastXML_VERSION_PATCH@(
-#define __cdecl [^
-]*)?
+#define __c[^
+]*)*
 #define __clang__ 1(
 #define __clang_literal_encoding__ [^
 ]*)?
