test: add tests for numeric_limits denorm_min with float types

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -585,6 +585,7 @@ castxml_test_output(Method-overrides)
 castxml_test_output(Method-rvalue-reference)
 castxml_test_output(MethodType)
 castxml_test_output(MethodType-cv)
+castxml_test_output(NumericLimits-denorm_min)
 castxml_test_output(Namespace)
 castxml_test_output(Namespace-anonymous)
 castxml_test_output(Namespace-Class-members)
