test: add case with Elaborated struct type in C

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -588,6 +588,7 @@ castxml_test_output(Destructor)
 castxml_test_output(Destructor-annotate)
 castxml_test_output(Destructor-deprecated)
 castxml_test_output(Elaborated)
+castxml_test_output_c(Elaborated)
 castxml_test_output(Elaborated-ns)
 castxml_test_output(Enumeration)
 castxml_test_output(Enumeration-annotate)
