test: add case with types named with an injected class name decl

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -548,6 +548,7 @@ castxml_test_output(Class-implicit-member-reference)
 castxml_test_output(Class-implicit-members)
 castxml_test_output(Class-incomplete)
 castxml_test_output(Class-incomplete-twice)
+castxml_test_output_11(Class-member-injected)
 castxml_test_output(Class-member-Struct-anonymous)
 castxml_test_output(Class-member-template)
 castxml_test_output(Class-member-template-access)
