test: Add tests for C++23 modes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -169,6 +169,16 @@ macro(castxml_test_output_gnuxx20 test)
   castxml_test_output_common(castxml1 cxx gnu++20 ${test})
 endmacro()
 
+macro(castxml_test_output_cxx23 test)
+  castxml_test_output_common(gccxml cxx c++23 ${test})
+  castxml_test_output_common(castxml1 cxx c++23 ${test})
+endmacro()
+
+macro(castxml_test_output_gnuxx23 test)
+  castxml_test_output_common(gccxml cxx gnu++23 ${test})
+  castxml_test_output_common(castxml1 cxx gnu++23 ${test})
+endmacro()
+
 macro(castxml_test_output_broken_cxx98 test)
   castxml_test_output_common(gccxml.broken cxx c++98 ${test})
   castxml_test_output_common(castxml1.broken cxx c++98 ${test})
@@ -219,6 +229,16 @@ macro(castxml_test_output_broken_gnuxx20 test)
   castxml_test_output_common(castxml1.broken cxx gnu++20 ${test})
 endmacro()
 
+macro(castxml_test_output_broken_cxx23 test)
+  castxml_test_output_common(gccxml.broken cxx c++23 ${test})
+  castxml_test_output_common(castxml1.broken cxx c++23 ${test})
+endmacro()
+
+macro(castxml_test_output_broken_gnuxx23 test)
+  castxml_test_output_common(gccxml.broken cxx gnu++23 ${test})
+  castxml_test_output_common(castxml1.broken cxx gnu++23 ${test})
+endmacro()
+
 macro(castxml_test_output_c test)
   castxml_test_output_c89(${test})
   castxml_test_output_gnu89(${test})
@@ -241,6 +261,10 @@ macro(castxml_test_output test)
     castxml_test_output_cxx20(${test})
     castxml_test_output_gnuxx20(${test})
   endif()
+  if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 17)
+    castxml_test_output_cxx23(${test})
+    castxml_test_output_gnuxx23(${test})
+  endif()
 endmacro()
 
 macro(castxml_test_output_11 test)
@@ -254,6 +278,10 @@ macro(castxml_test_output_11 test)
     castxml_test_output_cxx20(${test})
     castxml_test_output_gnuxx20(${test})
   endif()
+  if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 17)
+    castxml_test_output_cxx23(${test})
+    castxml_test_output_gnuxx23(${test})
+  endif()
 endmacro()
 
 macro(castxml_test_output_14 test)
@@ -264,6 +292,10 @@ macro(castxml_test_output_14 test)
   if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
     castxml_test_output_cxx20(${test})
     castxml_test_output_gnuxx20(${test})
+  endif()
+  if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 17)
+    castxml_test_output_cxx23(${test})
+    castxml_test_output_gnuxx23(${test})
   endif()
 endmacro()
 
@@ -288,6 +320,10 @@ macro(castxml_test_output_broken test)
   if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
     castxml_test_output_broken_cxx20(${test})
     castxml_test_output_broken_gnuxx20(${test})
+  endif()
+  if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 17)
+    castxml_test_output_broken_cxx23(${test})
+    castxml_test_output_broken_gnuxx23(${test})
   endif()
 endmacro()
 
@@ -344,6 +380,11 @@ endif()
 if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
   castxml_test_cmd(gccxml-and-c++20 --castxml-gccxml -std=c++20 ${empty_cxx})
   castxml_test_cmd(castxml-and-c++20 --castxml-output=1 -std=c++20 ${empty_cxx})
+endif()
+
+if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 17)
+  castxml_test_cmd(gccxml-and-c++23 --castxml-gccxml -std=c++23 ${empty_cxx})
+  castxml_test_cmd(castxml-and-c++23 --castxml-output=1 -std=c++23 ${empty_cxx})
 endif()
 
 castxml_test_cmd(gccxml-and-objc1 --castxml-gccxml ${empty_m})
