RunClang: Detect -std=c++23 from --castxml-cc-{gnu,msvc}

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -460,6 +460,10 @@ if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
   castxml_test_cmd(cc-gnu-std-c++20 --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=202002L -ansi ")" ${empty_cxx} "-###")
   castxml_test_cmd(cc-gnu-std-gnu++20 --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=202002L ")" ${empty_cxx} "-###")
 endif()
+if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 17)
+  castxml_test_cmd(cc-gnu-std-c++23 --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=202302L -ansi ")" ${empty_cxx} "-###")
+  castxml_test_cmd(cc-gnu-std-gnu++23 --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=202302L ")" ${empty_cxx} "-###")
+endif()
 castxml_test_cmd(cc-gnu-std-explicit --castxml-cc-gnu "(" $<TARGET_FILE:cc-gnu> -std=199901L ")" -std=c++14 ${empty_cxx} "-###")
 castxml_test_cmd(cc-gnu-c-bad-cmd --castxml-cc-gnu-c "(" cc-gnu-c-bad-cmd ")" ${empty_c})
 castxml_test_cmd(cc-gnu-c-src-c-E --castxml-cc-gnu-c $<TARGET_FILE:cc-gnu> ${empty_c} -E -dM)
@@ -496,6 +500,10 @@ castxml_test_cmd(cc-msvc-std-c++17-E --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc
 if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 11)
   castxml_test_cmd(cc-msvc-std-c++20 --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1930 -msvc_lang=202002L ")" ${empty_cxx} "-###")
   castxml_test_cmd(cc-msvc-std-c++20-E --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1930 -msvc_lang=202002L -stdcpp_default_new_alignment=16ll ")" ${empty_cxx} -E -dM)
+endif()
+if(LLVM_VERSION_MAJOR VERSION_GREATER_EQUAL 17)
+  castxml_test_cmd(cc-msvc-std-c++23 --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1944 -msvc_lang=202302L ")" ${empty_cxx} "-###")
+  castxml_test_cmd(cc-msvc-std-c++23-E --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1944 -msvc_lang=202302L -stdcpp_default_new_alignment=16ll ")" ${empty_cxx} -E -dM)
 endif()
 castxml_test_cmd(cc-msvc-std-explicit --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1500 ")" -std=gnu++14 ${empty_cxx} "-###")
 castxml_test_cmd(cc-msvc-builtin-1800-E --castxml-cc-msvc "(" $<TARGET_FILE:cc-msvc> -msc=1800 ")" ${empty_cxx} -E -dM)
