test: Label tests requiring a large stack size
The `cmd.fbracket-depth` test intentionally uses a large amount of stack
space.  With MSVC tools, the `-STACK:10000000` link flag is required.
However, GitHub Actions imposes a lower stack size limit.  Label the
test so it can be excluded.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -329,6 +329,7 @@ castxml_test_cmd(rsp-empty @${input}/empty.rsp)
 castxml_test_cmd(rsp-missing @${input}/does-not-exist.rsp)
 castxml_test_cmd(rsp-o-missing @${input}/o-missing.rsp)
 castxml_test_cmd(fbracket-depth -fbracket-depth=300 -std=c11 -c ${input}/fbracket-depth.c)
+set_property(TEST cmd.fbracket-depth APPEND PROPERTY LABELS LargeStackRequired) # aid exclusion
 
 # Test predefined macros when not using --castxml-cc-<id>.
 configure_file(expect/cmd.predefined-macros.stdout.txt.in
